LA-fixed lecture26-35

--- a/Linear-algebra/Lecture26.ipynb
+++ b/Linear-algebra/Lecture26.ipynb
@@ -12,7 +12,7 @@
     "* 特征值均为实数\n",
     "* 特征向量相互正交\n",
     "\n",
-    "在通常情况下，一个矩阵可以化为 $A=S\\Lambda^{S−1}$。而对于对称矩阵有 $A = Q\\Lambda Q^{-1} = Q\\Lambda Q^T$，该定理为谱定理（Spectral Theorem）。"
+    "在通常情况下，一个矩阵可以化为 $S\\Lambda S^{−1}$ 的形式。而对于对称矩阵有 $A = Q\\Lambda Q^{-1} = Q\\Lambda Q^T$，该定理为谱定理（Spectral Theorem）。"
    ]
   },
   {
@@ -25,7 +25,9 @@
     "\n",
     "论证 $\\bar{x}^Tx ≠ 0$，展开 $\\bar{x}^Tx = \\begin{bmatrix} \\bar{x_1}, \\bar{x_2}, \\dots, \\bar{x_n}\\end{bmatrix}\\begin{bmatrix} x_1 \\\\ x_2 \\\\ \\vdots \\\\ x_n\\end{bmatrix} = \\bar{x_1}x_1 + \\dots + \\bar{x_n}x_n$，如果 $x_i = a_i + b_i i, \\bar{x_i} = a_i - b_i i$，则有 $\\bar{x_i}x_i = a^2 + b^2 ≥ 0$。当 $x ≠ 0$ 时，$\\bar{x}^Tx ≠ 0$。\n",
     "\n",
-    "而对于复数矩阵，则还需要满足 $A = \\bar{A}^T$。并且**主元符号的正负数量与特征值的正负数量相同**。"
+    "而对于复数矩阵，则还需要满足 $A = \\bar{A}^T$。\n",
+    "\n",
+    "注意：**主元符号的正负数量与特征值的正负数量相同**。"
    ]
   },
   {
