--- a/Linear-algebra/Lecture28.ipynb
+++ b/Linear-algebra/Lecture28.ipynb
@@ -16,18 +16,18 @@
     "\n",
     "例子：$A = \\begin{bmatrix}2 & 6 \\\\ 6 & y \\end{bmatrix}$\n",
     "\n",
-    "* 当 $y = 18$ 时：矩阵 $A$ 是一个半正定矩阵（Positive Semi-definite Matrix），因为 $detA = 0$，矩阵为奇异矩阵，所以有一个特征值为零，$\\lambda_1 = 0, \\lambda_2 = 20$。\n",
+    "* 当 $y = 18$ 时：矩阵 $A$ 是一个半正定矩阵（Positive Semi-definite Matrix），因为 $detA = 0$，矩阵为奇异矩阵，所以有一个特征值为零，$\\lambda_1 = 0, \\lambda_2 = 20$（半正定矩阵的特征值大于等于零）。\n",
     "* 当 $y = 7$ 时：矩阵 $A$ 不是一个正定矩阵，此时 $\\begin{bmatrix} x_1 & x_2 \\end{bmatrix}\\begin{bmatrix}2 & 6 \\\\ 6 & 7 \\end{bmatrix}\\begin{bmatrix}x_1 \\\\ x_2\\end{bmatrix} = 2x_1^2 + 12x_1x_2 + 7x_2^2$，当 $x_1 = 1, x_2 = -1$，$x^TAx < 0$。\n",
     "* 当 $y = 20$ 时：矩阵 $A$ 为一个正定矩阵，$\\begin{bmatrix} x_1 & x_2 \\end{bmatrix}\\begin{bmatrix}2 & 6 \\\\ 6 & 20 \\end{bmatrix}\\begin{bmatrix}x_1 \\\\ x_2\\end{bmatrix} = 2x_1^2 + 12x_1x_2 + 20x_2^2 = 2(x+3y)^2+2y^2 ≥ 0$。\n",
     "\n",
-    "在微积分中，一元函数取极小值需要一阶导数为零且二阶导数为正，即 $\\frac{du}{dx}=0, \\frac{d^2u}{dx^2}>0$，在线性代数中我们遇到的多元函数$f(x_1, x_2, \\dots, x_n)$，要取极小值需要二阶偏导数矩阵为正定矩阵，即 $\\begin{bmatrix}f_{xx} & f_{xy} \\\\ f_{yx} & f_{yy}\\end{bmatrix}$。显然，矩阵中的主对角线元素必须为正，并且可以抵消混合导数的影响。因为二阶导数的求导次序并不影响结果，所以矩阵必须是对称的。"
+    "在微积分中，一元函数取极小值需要一阶导数为零且二阶导数为正，即 $\\frac{du}{dx}=0, \\frac{d^2u}{dx^2}>0$，在线性代数中我们遇到的多元函数$f(x_1, x_2, \\dots, x_n)$，要取极小值需要二阶偏导数矩阵为正定矩阵，即 $\\begin{bmatrix}f_{xx} & f_{xy} \\\\ f_{yx} & f_{yy}\\end{bmatrix}$。显然，矩阵中的主对角线元素必须为正，并且可以抵消混合导数的影响。因为二阶导数的求导次序并不影响结果，所以矩阵一定是对称的。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "再来看一个三阶矩阵 $A = \\begin{bmatrix}2 & -1 & 0 \\\\ -1 & 2 & -1 \\\\ 0 & -1 & 2\\end{bmatrix}$，此时的顺序主子阵的行列式有 $dets = 2, 3, 4$，主元有 $2, \\frac{3}{2}, \\frac{4}{3}$，特征值 $2 - \\sqrt{2}, 2, 2 + \\sqrt{2}$。\n",
+    "再来看一个三阶矩阵 $A = \\begin{bmatrix}2 & -1 & 0 \\\\ -1 & 2 & -1 \\\\ 0 & -1 & 2\\end{bmatrix}$，此时的顺序主子阵的行列式有 $dets = 2, 3, 4$，主元有 $2, \\frac{3}{2}, \\frac{4}{3}$，特征值有 $2 - \\sqrt{2}, 2, 2 + \\sqrt{2}$。\n",
     "\n",
     "计算 $x^TAx=2x^2_1+2x^2_2+2x^2_3−2x_1x_2−2x_2x_3$，图像是四维的抛物面，并且在 $f(x_1, x_2,x_3)=1$ 处的截面是一个椭圆体。一般椭圆体有三条轴，特征值的大小决定了三条轴的长度，而特征向量的方向与三条轴的方向相同。\n",
     "\n",
