--- a/Linear-algebra/Lecture30.ipynb
+++ b/Linear-algebra/Lecture30.ipynb
@@ -8,10 +8,10 @@
     "\n",
     "奇异值分解（Singular Value Decomposition，SVD）是将矩阵进行因子分解，即 $A =  U\\Sigma V^T$，其中 $U, V$ 为正交矩阵，$\\Sigma$ 为对角线矩阵。\n",
     "\n",
-    "* 在正定性一讲（二十八讲）中，我们知道一个正矩阵可以拆分成 $A = Q\\Lambda Q^T$ 的形式， 由于 $A$ 对称性其特征向量是正交的，且其 $\\Lambda$ 矩阵中的元素皆为正，这就是正定矩阵的奇异值分解。\n",
+    "* 在正定性一讲（二十八讲）中，我们知道一个正矩阵可以拆分成 $A = Q\\Lambda Q^T$ 的形式， 由于 $A$ 的对称性，其特征向量是正交的，且 $\\Lambda$ 矩阵中的元素皆为正，这就是正定矩阵的奇异值分解。\n",
     "* 在对角化一讲（二十二讲）中，我们知道一个方阵可以拆分成 $A = S\\Lambda S^T$ 的形式，但由于 $S$ 不是正交矩阵，所以对角化不是一个奇异值分解的过程。\n",
     "\n",
-    "现在，我们要做的是，在矩阵 $A$ 的行空间中找到一组特殊的正交基 $v_1,v2, \\dots, v_r$，这组基在经过矩阵 $A$ 代表的变换后可以得到一组在矩阵 $A$ 列空间的一组基，即 $AV = U\\Sigma$。因为 $\\Sigma$ 为对角线矩阵，所以 $U\\Sigma$ 只是对每个矩阵 $U$ 中基向量进行了一个缩放，而矩阵 $\\Sigma$ 中的元素 $\\sigma_i$ 称为缩放因子，矩阵 $A$ 的左零空间和零空间将体现在 $\\sigma$ 的零值中。"
+    "现在，我们要做的是，在矩阵 $A$ 的行空间中找到一组特殊的正交基 $v_1,v_2, \\dots, v_r$，这组基在经过矩阵 $A$ 代表的变换后可以得到一组在矩阵 $A$ 列空间的一组基，即 $AV = U\\Sigma$。因为 $\\Sigma$ 为对角线矩阵，所以 $U\\Sigma$ 只是对矩阵 $U$ 中每个基向量进行了一个缩放，而矩阵 $\\Sigma$ 中的元素 $\\sigma_i$ 称为缩放因子，矩阵 $A$ 的左零空间和零空间将体现在 $\\sigma$ 的零值中。"
    ]
   },
   {
@@ -30,7 +30,7 @@
     "\n",
     "同理有 $AA^T = U\\Sigma V^T V \\Sigma U^T = U\\Sigma^2U^T$，\n",
     "\n",
-    "$$A^TA = \\begin{bmatrix}32 & 0 \\\\ 0 & 18\\end{bmatrix} \\Rightarrow x_1 = \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix}, \\lambda_1 = 32, x_2 = \\begin{bmatrix}0 \\\\ -1 \\end{bmatrix}, \\lambda_2 = 18 $$\n",
+    "$$AA^T = \\begin{bmatrix}32 & 0 \\\\ 0 & 18\\end{bmatrix} \\Rightarrow x_1 = \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix}, \\lambda_1 = 32, x_2 = \\begin{bmatrix}0 \\\\ -1 \\end{bmatrix}, \\lambda_2 = 18 $$\n",
     "\n",
     "于是最终有，\n",
     "\n",
@@ -43,9 +43,9 @@
    "source": [
     "再做一个例子，矩阵 $A = \\begin{bmatrix}4 & 3 \\\\ 8 & 6\\end{bmatrix}$，该矩阵的秩为一，所以列空间为 $\\begin{bmatrix}4 \\\\ 8\\end{bmatrix}$ 的倍数，行空间为 $\\begin{bmatrix}4 \\\\ 3\\end{bmatrix}$ 的倍数。\n",
     "\n",
-    "通过求解可得 $v_1 = \\begin{bmatrix}\\frac{4}{5} \\\\ \\frac{3}{5}\\end{bmatrix}, u_1 = \\begin{bmatrix}\\frac{1}{\\sqrt{5}} \\\\ \\frac{2}{\\sqrt{5}}\\end{bmatrix}$，由于 $A$ 是秩一矩阵，则 $A^TA$ 也不满秩，所以必有特征值 $0$，所以继续求解零空间的解有 $v_2 = \\begin{bmatrix}\\frac{3}{5} \\\\ -\\frac{4}{5}\\end{bmatrix}, u_2 = \\begin{bmatrix}\\frac{2}{\\sqrt{5}} \\\\ -\\frac{1}{\\sqrt{5}}\\end{bmatrix}$。\n",
+    "通过求解可得 $v_1 = \\begin{bmatrix}\\frac{4}{5} \\\\ \\frac{3}{5}\\end{bmatrix}, u_1 = \\begin{bmatrix}\\frac{1}{\\sqrt{5}} \\\\ \\frac{2}{\\sqrt{5}}\\end{bmatrix}$，由于 $A$ 是秩一矩阵，则 $A^TA$ 也不满秩，所以必有为 $0$ 的特征值，所以继续求解零空间的解有 $v_2 = \\begin{bmatrix}\\frac{3}{5} \\\\ -\\frac{4}{5}\\end{bmatrix}, u_2 = \\begin{bmatrix}\\frac{2}{\\sqrt{5}} \\\\ -\\frac{1}{\\sqrt{5}}\\end{bmatrix}$。\n",
     "\n",
-    "于是有：\n",
+    "于是有结论：\n",
     "\n",
     "* $v_1, \\dots, v_r$ 为行空间中的标准正交基。\n",
     "* $u_1, \\dots, u_r$ 为列空间中的标准正交基。\n",
