--- a/Linear-algebra/Lecture31.ipynb
+++ b/Linear-algebra/Lecture31.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "线性变换的核心，就是该变换使用的相应的矩阵。\n",
     "\n",
-    "比如现在有一个线性变换，是将一个三维向量降为二维向量，$T: \\mathbb{R}^3 \\rightarrow \\mathbb{R}^2$，则变换对应的矩阵乘法 $T(v) = Av$ 中，$T(v) \\in \\mathbb{R}^2$ 为输入值，$v \\in \\mathbb{R}^3$ 为输入值，矩阵 $A$ 为一个 $2 * 3$ 的矩阵。\n",
+    "比如现在有一个线性变换是将一个三维向量降为二维向量，$T: \\mathbb{R}^3 \\rightarrow \\mathbb{R}^2$，则变换对应的矩阵乘法有 $T(v) = Av$ 中，$T(v) \\in \\mathbb{R}^2$ 为输出值，$v \\in \\mathbb{R}^3$ 为输入值，矩阵 $A$ 为一个 $2 * 3$ 的矩阵。\n",
     "\n",
     "如果我们希望知道线性变换 $T$ 对整个输入空间 $\\mathbb{R}^n$ 的影响，我们可以找到空间的一组基 $v_1, v_2, \\dots, v_n$，检查 $T$ 对每一个基的影响 $T(v_1), T(v_2), ⋯, T(v_n)$，由于输入空间中的任意向量都满足：$v = c_1v_1 + c_2v_2 + \\dots + c_nv_n$，所以我们可以根据 $T(v)$ 推出线性变换 $T$ 对空间内任意向量的影响，得到 $T(v) = c_1T(v_1) + c_2T(v_2) + \\dots + c_nT(v_n)$。\n",
     "\n",
