--- a/Linear-algebra/Lecture32.ipynb
+++ b/Linear-algebra/Lecture32.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "## 图像压缩\n",
     "\n",
-    "假设现在有一张 $255 * 255$ 的图像，第 $i$ 个位置的像素用 $x_i$ 来表示，如果是灰度图像，$x_i$ 的取值一般在 $[0, 255]$，在计算机中也就是八个比特位，考虑整张图的大小 $x \\in \\mathbb{R}^n, n = 512^2$；如果是彩色照片，$x_i$ 一般用三个值来表示一个像素，即向量长度变为灰度中的三倍。\n",
+    "假设现在有一张 $512 * 512$ 的图像，第 $i$ 个位置的像素用 $x_i$ 来表示，如果是灰度图像，$x_i$ 的取值一般在 $[0, 255]$，在计算机中也就是八个比特位，考虑整张图的大小 $x \\in \\mathbb{R}^n, n = 512^2$；如果是彩色照片，$x_i$ 一般用三个值来表示一个像素，即向量长度变为灰度中的三倍。\n",
     "\n",
-    "这么大的数据量进行传输是非常耗时和困难的，所以通常通过压缩来减少数据大小。JPEG （Joint Photographic Expert Group，联合图像专家组）为一种有损的压缩方法，该方法采用的是基变换的方式压缩图像。好比如说，一块干净的黑板，相邻的位置的数值应该是非常接近的，这时如果按照每一个位置去表示像素就会非常浪费空间，也就是标准基不能很好的利用这张图片的性质。\n",
+    "这么大的数据量进行传输时是非常耗时和困难的，所以通常通过压缩来减少数据大小。JPEG （Joint Photographic Expert Group，联合图像专家组）为一种有损的压缩方法，该方法采用的是基变换的方式压缩图像。好比如说，一块干净的黑板，相邻位置的数值应该是非常接近的，这时如果按照每一个位置去表示，像素就会非常浪费空间，也就是标准基不能很好的利用这张图片的性质。\n",
     "\n",
     "标准基的形式为 $\\begin{bmatrix}1 \\\\ 0 \\\\ \\vdots \\\\ 0\\end{bmatrix}, \\begin{bmatrix}0 \\\\ 1 \\\\ \\vdots \\\\ 0 \\end{bmatrix}, \\dots, \\begin{bmatrix} 0 \\\\ 0 \\\\ \\vdots \\\\ 1 \\end{bmatrix}$，现在需要用另一个更好的基来描述图像。\n",
     "\n",
@@ -48,12 +48,12 @@
     "\n",
     "小波（Wavelets）基是另一种基，它是傅里叶基的竞争对手，以 $8 * 8$ 为例，$\\begin{bmatrix}1\\\\1\\\\1\\\\1\\\\1\\\\1\\\\1\\\\1\\end{bmatrix}, \\begin{bmatrix}1\\\\1\\\\1\\\\1\\\\-1\\\\-1\\\\-1\\\\-1\\end{bmatrix},  \\begin{bmatrix}1\\\\1\\\\-1\\\\-1\\\\0\\\\0\\\\0\\\\0\\end{bmatrix}, \\begin{bmatrix}0\\\\0\\\\0\\\\0\\\\1\\\\1\\\\-1\\\\-1\\end{bmatrix}, \n",
     "\\begin{bmatrix}1\\\\-1\\\\0\\\\0\\\\0\\\\0\\\\0\\\\0\\end{bmatrix} , \\begin{bmatrix}0\\\\0\\\\1\\\\-1\\\\0\\\\0\\\\0\\\\0\\end{bmatrix}, \n",
-    "\\begin{bmatrix}0\\\\0\\\\0\\\\0\\\\1\\\\-1\\\\0\\\\0\\end{bmatrix}, \\begin{bmatrix}0\\\\0\\\\0\\\\0\\\\0\\\\0\\\\1\\\\-1\\end{bmatrix}$。对于一个 $8*8$ 的像素 $P = \\begin{bmatrix}p_1 \\\\ p_2 \\\\ \\vdots \\\\ p_8\\end{bmatrix} = c_1w_1 + c_2w_2 + \\dots + c_8w_8 = \\begin{bmatrix}w_1 & w_2 & \\dots & w_8\\end{bmatrix}\\begin{bmatrix} c_1 \\\\ c_2 \\\\ \\vdots \\\\ c_8\\end{bmatrix} = WC$，所以在求 $C$ 时，有 $C = W^{-1}P$。\n",
+    "\\begin{bmatrix}0\\\\0\\\\0\\\\0\\\\1\\\\-1\\\\0\\\\0\\end{bmatrix}, \\begin{bmatrix}0\\\\0\\\\0\\\\0\\\\0\\\\0\\\\1\\\\-1\\end{bmatrix}$。在标准基下的一组像素 $P = \\begin{bmatrix}p_1 \\\\ p_2 \\\\ \\vdots \\\\ p_8\\end{bmatrix} = c_1w_1 + c_2w_2 + \\dots + c_8w_8 = \\begin{bmatrix}w_1 & w_2 & \\dots & w_8\\end{bmatrix}\\begin{bmatrix} c_1 \\\\ c_2 \\\\ \\vdots \\\\ c_8\\end{bmatrix} = WC$，所以在求 $C$ 时，有 $C = W^{-1}P$。\n",
     "\n",
     "\n",
     "所以，在选取一个好的基：\n",
     "* 计算快，快速傅里叶变换（FFT）和快速小波变换（FWT）。\n",
-    "* 需少量向量即可最大限度的重现图像。"
+    "* 只需少量向量即可最大限度的重现图像。"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "source": [
     "## 基变换\n",
     "\n",
-    "基变换是让一个向量转换由指定基 $W$ 组成的形式，即 $x = WC$。\n",
+    "基变换是让一个向量转换为由指定基 $W$ 组成的形式，即 $x = WC$。\n",
     "\n",
     "假设现在有线性变换 $T: \\mathbb{R}^8 \\rightarrow \\mathbb{R}^8$，原先的基向量 $V$ 在线性变换的作用上得到 $A$，基变换后的基向量 $W$ 在线性变换的作用下得到 $B$，矩阵 $A$ 和 $B$ 是相似的，即 $B = M^{-1}AM$，而 $M$ 就是基变换矩阵。"
    ]
