--- a/Linear-algebra/README.ipynb
+++ b/Linear-algebra/README.ipynb
@@ -55,6 +55,11 @@
     "* [第三十五讲 期末复习](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture35.ipynb)\n",
     "\n",
     "\n",
+    "## 导图\n",
+    "\n",
+    "![导图](./outline.png)\n",
+    "\n",
+    "\n",
     "## 参考资料\n",
     "\n",
     "* 麻省理工公开课：线性代数（[网易公开课](http://open.163.com/special/opencourse/daishu.html)），讲师 Gilbert Strang，麻省理工学院。\n",
