LA - fixed link error

--- a/Linear Algebra/README.ipynb
+++ b/Linear Algebra/README.ipynb
@@ -18,41 +18,41 @@
     "\n",
     "## 目录\n",
     "\n",
-    "* [第一讲 方程组的几何解释](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture01.ipynb)\n",
-    "* [第二讲 矩阵消元](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture02.ipynb)\n",
-    "* [第三讲 乘法和逆矩阵](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture03.ipynb)\n",
-    "* [第四讲 A的LU分解](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture04.ipynb)\n",
-    "* [第五讲 转置-置换-向量R](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture05.ipynb)\n",
-    "* [第六讲 列空间和零空间](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture06.ipynb)\n",
-    "* [第七讲 求解Ax=0：主变量、特解](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture07.ipynb)\n",
-    "* [第八讲 求解Ax=b：可解性和解的结构](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture08.ipynb)\n",
-    "* [第九讲 线性相关性、基、维数](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture09.ipynb)\n",
-    "* [第十讲 四个基本子空间](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture10.ipynb)\n",
-    "* [第十一讲 矩阵空间、秩1矩阵和小世界图](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture11.ipynb)\n",
-    "* [第十二讲 图和网络](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture12.ipynb)\n",
-    "* [第十三讲 复习一](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture13.ipynb)\n",
-    "* [第十四讲 正交向量与子空间](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture14.ipynb)\n",
-    "* [第十五讲 子空间投影](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture15.ipynb)\n",
-    "* [第十六讲 投影矩阵和最小二乘](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture16.ipynb)\n",
-    "* [第十七讲 正交矩阵和Gram-Schmidt正交化](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture17.ipynb)\n",
-    "* [第十八讲 行列式及其性质](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture18.ipynb)\n",
-    "* [第十九讲 行列式公式和代数余子式](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture19.ipynb)\n",
-    "* [第二十讲 克拉默法则、逆矩阵、体积](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture20.ipynb)\n",
-    "* [第二十一讲 特征值和特征向量](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture21.ipynb)\n",
-    "* [第二十二讲 对角化和A矩阵的幂](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture22.ipynb)\n",
-    "* [第二十三讲 微分方程和exp(At)](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture23.ipynb)\n",
-    "* [第二十四讲 马尔科夫矩阵、傅里叶级数](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture24.ipynb)\n",
-    "* [第二十五讲 复习二](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture25.ipynb)\n",
-    "* [第二十六讲 对称矩阵及正定性](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture26.ipynb)\n",
-    "* [第二十七讲 复数矩阵和快速傅里叶变换](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture27.ipynb)\n",
-    "* [第二十八讲 正定矩阵和最小值](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture28.ipynb)\n",
-    "* [第二十九讲 相似矩阵和诺尔当行](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture29.ipynb)\n",
-    "* [第三十讲 奇异值分解](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture30.ipynb)\n",
-    "* [第三十一讲 线性变化及对应矩阵](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture31.ipynb)\n",
-    "* [第三十二讲 基变换和图像压缩](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture32.ipynb)\n",
-    "* [第三十三讲 复习三](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture33.ipynb)\n",
-    "* [第三十四讲 左右逆和伪逆](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture34.ipynb)\n",
-    "* [第三十五讲 期末复习](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture35.ipynb)\n",
+    "* [第一讲 方程组的几何解释](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture01.ipynb)\n",
+    "* [第二讲 矩阵消元](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture02.ipynb)\n",
+    "* [第三讲 乘法和逆矩阵](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture03.ipynb)\n",
+    "* [第四讲 A的LU分解](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture04.ipynb)\n",
+    "* [第五讲 转置-置换-向量R](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture05.ipynb)\n",
+    "* [第六讲 列空间和零空间](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture06.ipynb)\n",
+    "* [第七讲 求解Ax=0：主变量、特解](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture07.ipynb)\n",
+    "* [第八讲 求解Ax=b：可解性和解的结构](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture08.ipynb)\n",
+    "* [第九讲 线性相关性、基、维数](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture09.ipynb)\n",
+    "* [第十讲 四个基本子空间](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture10.ipynb)\n",
+    "* [第十一讲 矩阵空间、秩1矩阵和小世界图](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture11.ipynb)\n",
+    "* [第十二讲 图和网络](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture12.ipynb)\n",
+    "* [第十三讲 复习一](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture13.ipynb)\n",
+    "* [第十四讲 正交向量与子空间](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture14.ipynb)\n",
+    "* [第十五讲 子空间投影](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture15.ipynb)\n",
+    "* [第十六讲 投影矩阵和最小二乘](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture16.ipynb)\n",
+    "* [第十七讲 正交矩阵和Gram-Schmidt正交化](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture17.ipynb)\n",
+    "* [第十八讲 行列式及其性质](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture18.ipynb)\n",
+    "* [第十九讲 行列式公式和代数余子式](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture19.ipynb)\n",
+    "* [第二十讲 克拉默法则、逆矩阵、体积](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture20.ipynb)\n",
+    "* [第二十一讲 特征值和特征向量](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture21.ipynb)\n",
+    "* [第二十二讲 对角化和A矩阵的幂](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture22.ipynb)\n",
+    "* [第二十三讲 微分方程和exp(At)](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture23.ipynb)\n",
+    "* [第二十四讲 马尔科夫矩阵、傅里叶级数](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture24.ipynb)\n",
+    "* [第二十五讲 复习二](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture25.ipynb)\n",
+    "* [第二十六讲 对称矩阵及正定性](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture26.ipynb)\n",
+    "* [第二十七讲 复数矩阵和快速傅里叶变换](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture27.ipynb)\n",
+    "* [第二十八讲 正定矩阵和最小值](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture28.ipynb)\n",
+    "* [第二十九讲 相似矩阵和诺尔当行](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture29.ipynb)\n",
+    "* [第三十讲 奇异值分解](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture30.ipynb)\n",
+    "* [第三十一讲 线性变化及对应矩阵](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture31.ipynb)\n",
+    "* [第三十二讲 基变换和图像压缩](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture32.ipynb)\n",
+    "* [第三十三讲 复习三](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture33.ipynb)\n",
+    "* [第三十四讲 左右逆和伪逆](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture34.ipynb)\n",
+    "* [第三十五讲 期末复习](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture35.ipynb)\n",
     "\n",
     "\n",
     "## 导图\n",
