--- a/Operating System/Chapter01.ipynb
+++ b/Operating System/Chapter01.ipynb
@@ -68,10 +68,19 @@
     "\n",
     "**微内核**：尽可能把内核功能移动到用户空间。内核只负责中断处理、消息传递等核心功能，而像文件系统、内存管理、网络协议栈等则由外部进程负责。这样做的代价则是系统开销变大。\n",
     "\n",
-    "**外内核**：外内核的设计分为两部分，一部分与应用程序紧密结合，另一部则抽象硬件。\n",
+    "**外内核**：外内核的设计分为两部分，一部分与应用程序紧密结合，另一部分则抽象硬件。\n",
     "\n",
     "**虚拟机**：虚拟机（VMs）是由虚拟机监视器（VMM）虚拟出一台完整的计算机，它的操作系统则运行在VMM之上，目标是多操作系统共享硬件资源。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
