--- a/Operating System/Chapter02.ipynb
+++ b/Operating System/Chapter02.ipynb
@@ -10,12 +10,14 @@
     "\n",
     "1. POST 加电自检，寻找显卡和执行BIOS。\n",
     "2. BIOS（Basic Input Output System）进程位于内存的固定位置，为基本的I/O处理系统，它会从磁盘的默认位置（一般为第一个扇区）加载一个大小为512字节的 Bootloader 程序。\n",
-    "3. Bootloader 程序会将保存在磁盘中的操作系统加载到内存中，并将执行权限交给操作系统。\n"
+    "3. Bootloader 程序会将保存在磁盘中的操作系统加载到内存中，并将执行权限交给操作系统。"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "## 2.2 系统调用、异常、中断\n",
     "\n",
@@ -78,17 +80,8 @@
     "* 建立内核堆栈。\n",
     "* 验证参数开销。\n",
     "* 内核态映射到用户态的地址空间。\n",
-    "* 内核态独立的地址空间。\n"
+    "* 内核态独立的地址空间。"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
