--- a/Operating System/Chapter01.ipynb
+++ b/Operating System/Chapter01.ipynb
@@ -14,8 +14,13 @@
     "\n",
     "**实验内容**：环境准备、系统启动及终端、物理内存管理、虚拟内存管理、内核线程管理、用户进程管理、CPU 调度、同步与互斥、文件系统。\n",
     "\n",
-    "**预备知识**：计算机结构原理（Intel 80386）、数据结构、C和汇编语言。\n",
-    "\n",
+    "**预备知识**：计算机结构原理（Intel 80386）、数据结构、C和汇编语言。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.2 什么是操作系统\n",
     "\n",
     "* 从用户角度出发，操作系统是一个控制软件，它管理应用程序，并为应用程序提供服务，有时负责终止程序。\n",
@@ -34,23 +39,43 @@
     "\n",
     "> TIP: 并发和并行\n",
     "> * 并发：一段时间内有多个程序在运行。\n",
-    "> * 并行：一个时刻内有多个程序在运行（多核处理器）。\n",
-    "\n",
+    "> * 并行：一个时刻内有多个程序在运行（多核处理器）。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.3 为什么学习操作系统\n",
     "\n",
     "操作系统是计算机科学研究的基石之一：\n",
     "* 计算机系统的基本组成部分\n",
     "* 由硬件的发展和应用需求所驱动\n",
-    "* 学术和工业的持续推进\n",
-    "\n",
+    "* 学术和工业的持续推进"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.4 如何学习操作系统\n",
     "\n",
-    "理论与实践结合。\n",
-    "\n",
+    "理论与实践结合。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.5 操作系统实例\n",
     "\n",
-    "Unix 家族、Linux 家族、Windows 家族。\n",
-    "\n",
+    "Unix 家族、Linux 家族、Windows 家族。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.6 操作系统的历史\n",
     "\n",
     "1. 早期计算机使用纸带传输程序和数据，操作系统只起到加载的作用。\n",
@@ -59,8 +84,15 @@
     "4. 内存的容量越来越大，通过多道程序设计让CPU可以同时执行多个程序。\n",
     "5. 分时系统的出现，依赖外部设备：时钟。\n",
     "6. 个人电脑操作系统。\n",
-    "7. 网络的快速发展，出现了分布式的操作系统。\n",
-    "\n",
+    "7. 网络的快速发展，出现了分布式的操作系统。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
     "## 1.7 操作系统的结构\n",
     "\n",
     "\n",
@@ -72,15 +104,6 @@
     "\n",
     "**虚拟机**：虚拟机（VMs）是由虚拟机监视器（VMM）虚拟出一台完整的计算机，它的操作系统则运行在VMM之上，目标是多操作系统共享硬件资源。"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
