fixed equation in os chapter06

--- a/Operating System/Chapter06.ipynb
+++ b/Operating System/Chapter06.ipynb
@@ -119,9 +119,9 @@
     "**工作集**：一个进程当前正在使用的逻辑页面集合，可以用一个二元函数$W(t,\\delta)$表示。\n",
     "\n",
     "* $t$ - 当前的执行时刻。\n",
-    "* $\\delta$ - 工作集窗口（Working-set window），即一个定长的页面访问的时间窗口。\n",
-    "* $W(t,\\delta)$ - 在当前时刻$t$之前的$\\delta$时间窗口当中的所有页面所组成的集合。\n",
-    "* $|W(t,\\delta)| - 指工作集的大小，即页面数目。\n",
+    "* $\\Delta$ - 工作集窗口（Working-set window），即一个定长的页面访问的时间窗口。\n",
+    "* $W(t,\\Delta)$ - 在当前时刻$t$之前的$\\delta$时间窗口当中的所有页面所组成的集合。\n",
+    "* $|W(t,\\Delta)|$ - 指工作集的大小，即页面数目。\n",
     "\n",
     "**常驻集**：指在当前时刻，进程实际驻留在内存中的页面几何，常驻集 $\\supseteq$ 工作集。当进程常驻集的大小达到某个数目之后，再给它分配更多的物理页面，缺页率也不会明显下降。\n",
     "\n",
