fixed os chapter07

--- a/Operating System/Chapter07.ipynb
+++ b/Operating System/Chapter07.ipynb
@@ -215,7 +215,7 @@
     "* 在一个进程中，一个线程发起的系统调用而导致的阻塞不会影响到其它的内核线程。\n",
     "* 时间片分配给线程，多线程的进程获得更多的CPU时间。\n",
     "\n",
-    "**轻量级线程**：内核支持的用户线程，一个进程可有一个或多个轻量级进程，每个量级进程由单独的内核线程支持。如Solaris，Linux。"
+    "**轻量级进程**：内核支持的用户线程，一个进程可有一个或多个轻量级进程，每个轻量级进程由单独的内核线程支持。如Solaris，Linux。"
    ]
   },
   {
