fixed os chapter06

--- a/Operating System/Chapter06.ipynb
+++ b/Operating System/Chapter06.ipynb
@@ -134,9 +134,9 @@
    "source": [
     "## 6.9 两个全局置换算法\n",
     "\n",
-    "**工作集置换算法**的基本思路为：当页面不属于工作集，则淘汰，而不是等到发生缺页中断时才淘汰（对于每个进程的常驻集不可变的情况）。\n",
+    "**工作集置换算法**的基本思路为：当页面不属于工作集，则淘汰，而不是等到发生缺页中断时才淘汰。\n",
     "\n",
-    "**可变分配策略**不同于工作集置换算法，它的每个进程的常驻集大小可变。它的具体实现是使用缺页率算法（Page Fault Frquency，PFF）来动态调整常驻集大小。**优缺点**：性能较好，但增加了系统开销。\n",
+    "**可变分配策略**不同于工作集置换算法，它的具体实现是使用缺页率算法（Page Fault Frquency，PFF）来动态调整常驻集大小。**优缺点**：性能较好，但增加了系统开销。\n",
     "\n",
     "**缺页率**：缺页次数/内存访问次数。它的影响因素有：\n",
     "* 页面置换算法\n",
