ml ex01, lecture04

--- a/Machine Learning/Stanford University/Lecture02.ipynb
+++ b/Machine Learning/Stanford University/Lecture02.ipynb
@@ -12,7 +12,7 @@
     "* $x^{(i)}$ denotes the “input” variables, also called input features.\n",
     "* $y^{(i)}$ denotes the “output” or target variable that the models are trying to predict.\n",
     "* A pair $(x^{(i)}, y^{(i)})$ is called a training example.\n",
-    "* A list of $m$ training examples $(x(i),y(i)) where $i=1,2,...$, m-is called a training set.\n",
+    "* A list of $m$ training examples $(x(i),y(i))$ where $i=1,2,...$, m-is called a training set.\n",
     "\n",
     "For solving a supervised learning problem, the goal is, given a training set, to learn a function $h: X \\rightarrow Y$ so that $h(x)$ is a \"good\" predictor for the corresponding value of $y$, this function $h$ is called a **hypothesis**.\n",
     "\n",
