--- a/Linear Algebra/README.ipynb
+++ b/Linear Algebra/README.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 线性代数笔记\n",
+    "# 线性代数\n",
     "\n",
-    "作者：[Jerakrs](http://jerakrs.com/)\n",
-    "\n",
-    "完成日期：2018 年 1 月 24 日\n",
+    "> 作者：[Jerakrs](http://jerakrs.com/)\n",
+    "> \n",
+    "> 完成日期：2018 年 1 月 24 日\n",
     "\n",
     "\n",
     "## 主要内容\n",
     "\n",
-    "麻省理工线性代数公开课笔记，课程代码 18.06。笔记使用 jupyter notebook (ipython notebook) 编写展示，可在[Nbviewer](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/README.ipynb)中查看。\n",
+    "麻省理工线性代数公开课笔记，课程代码 18.06。笔记使用 jupyter notebook 编写展示，项目可在[Nbviewer](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/README.ipynb)中查看。\n",
     "\n",
     "\n",
     "## 目录\n",
@@ -54,7 +54,6 @@
     "* [第三十四讲 左右逆和伪逆](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture34.ipynb)\n",
     "* [第三十五讲 期末复习](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear%20Algebra/Lecture35.ipynb)\n",
     "\n",
-    "\n",
     "## 导图\n",
     "\n",
     "![导图](./outline.png)\n",
@@ -66,15 +65,6 @@
     "* Introduction to Linear Algebra（[豆瓣](https://book.douban.com/subject/3582335/)），作者 Gilbert Strang。\n",
     "* 线性代数笔记（[Github](https://github.com/zlotus/notes-linear-algebra/blob/master/ReadMe.md)），作者 子实。\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
