--- a/Operating System/README.ipynb
+++ b/Operating System/README.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# 操作系统\n",
     "\n",
-    "作者: [Jerakrs](http://jerakrs.com/)\n",
-    "\n",
-    "完成日期: 2018 年 06 月 30 日\n",
+    "> 作者: [Jerakrs](http://jerakrs.com/)\n",
+    "> \n",
+    "> 完成日期: 2018 年 06 月 30 日\n",
     "\n",
     "## 主要内容\n",
     "\n",
