--- a/Machine Learning/Stanford University/Lecture02.ipynb
+++ b/Machine Learning/Stanford University/Lecture02.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "**Gradient Descent Algorithm**\n",
     "\n",
-    "repeat until convergence {  $\\theta_j := \\theta_j + \\alpha \\frac{\\delta }{\\delta  \\theta_j} J(\\theta_0, \\theta_1)$ }. For all $\\theta_j$ where $j=1,\\dots,n$ should be simultaneously updated.\n",
+    "repeat until convergence {  $\\theta_j := \\theta_j + \\alpha \\frac{\\partial  }{\\partial   \\theta_j} J(\\theta_0, \\theta_1)$ }. For all $\\theta_j$ where $j=1,\\dots,n$ should be simultaneously updated.\n",
     "\n",
     "$\\alpha$ is the learning rate:\n",
     "* if $\\alpha$ is too small, gradient descent can be slow.\n",
