--- a/Machine Learning/Stanford University/Lecture08.ipynb
+++ b/Machine Learning/Stanford University/Lecture08.ipynb
@@ -35,7 +35,7 @@
     "4. Compute $\\delta^{(L-1)}, \\delta^{(L-2)},\\dots,\\delta^{(2)}$ using $\\delta^{(l)} = ((\\Theta^{(l)})^T \\delta^{(l+1)})\\ .*\\ a^{(l)}\\ .*\\ (1 - a^{(l)})$.\n",
     "5. $\\Delta_{i,j}^{(l)} := \\Delta_{i,j}^{(l)} + a_{j}^{(l)}\\delta_i^{(l+1)}$ or with vectorization $\\Delta^{(l)} := \\Delta^{(l)} + \\delta^{(l+1)}(a^{(l)})^T$.\n",
     "\n",
-    "Define the $D_{i,j}^{(l)} := \\frac{\\delta}{ \\delta \\Theta^{(l)}_{i,j}}J(\\Theta)$, where $D_{i,j}^{(l)} = \\left\\{\\begin{matrix} \\frac{1}{m} (\\Delta^{(l)}_{i,j} + \\lambda\\Theta^{(l)}_{i,j}) & if j \\neq 0 \\\\ \\frac{1}{m} \\Delta^{(l)}_{i,j} &  if j = 0 \\end{matrix}\\right.$"
+    "Define the $D_{i,j}^{(l)} := \\frac{\\partial }{ \\partial  \\Theta^{(l)}_{i,j}}J(\\Theta)$, where $D_{i,j}^{(l)} = \\left\\{\\begin{matrix} \\frac{1}{m} (\\Delta^{(l)}_{i,j} + \\lambda\\Theta^{(l)}_{i,j}) & if j \\neq 0 \\\\ \\frac{1}{m} \\Delta^{(l)}_{i,j} &  if j = 0 \\end{matrix}\\right.$"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "\n",
     "Gradient checking will assure that otheur backpropagation works as intended, it can approximate the derivative of the cost function with:\n",
     "\n",
-    "$$\\frac{\\delta}{\\delta\\Theta}J(\\Theta) = \\frac{J(\\Theta + \\epsilon) - J(\\Theta - \\epsilon)}{2\\epsilon}$$\n",
+    "$$\\frac{\\partial }{\\partial \\Theta}J(\\Theta) = \\frac{J(\\Theta + \\epsilon) - J(\\Theta - \\epsilon)}{2\\epsilon}$$\n",
     "\n",
     "Once we have verified once that our backpropagation algorithm is correct, it doesn't need to compute gradApprox again. The code to compute gradApprox can be very slow."
    ]
@@ -108,19 +108,10 @@
     "* randomly initial weights.\n",
     "* implement forward propagation to get $h_{\\Theta}(x^{(i)})$ for any $x^{(i)}$.\n",
     "* implement code to comput cost function $J(\\Theta)$.\n",
-    "* implement backprop to comput partial derivatices $\\frac{\\delta}{\\delta \\Theta_{j,k}^{(l)}}J(\\Theta)$.\n",
+    "* implement backprop to comput partial derivatices $\\frac{\\partial }{\\partial  \\Theta_{j,k}^{(l)}}J(\\Theta)$.\n",
     "* using gradient checking to confirm that the backpropagation works, then disable gradient checking.\n",
     "* usnig gradient descent or a built-in optimization function to minimize the cost function with the weights in theta."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
