--- a/Machine Learning/Stanford University/Lecture03.ipynb
+++ b/Machine Learning/Stanford University/Lecture03.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "**Cost function**: $J(\\theta) = \\frac{1}{2m} \\sum^m_{i=1}(h_{\\theta}(x^{(i)} - y^{(i)})^2$\n",
     "\n",
-    "**Gradient descent**: repeat until convergence {$\\theta_j := \\theta_j - \\alpha \\frac{\\delta}{\\delta  \\theta_j}J(\\theta)$}"
+    "**Gradient descent**: repeat until convergence {$\\theta_j := \\theta_j - \\alpha \\frac{\\partial }{\\partial   \\theta_j}J(\\theta)$}"
    ]
   },
   {
